--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,6 @@
         "sourceMap": true
     },
     "include": [
-        "src/**/*", "test/partialResponsifyParser.test.ts"
+        "src/**/*",
     ]
 }
