--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "partial-responsify",
-  "version": "0.6.1",
+  "version": "0.6.2",
   "description": "Validate and return partial response from field, just like graphql, but without the black magic.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -19,9 +19,9 @@
   "devDependencies": {
     "@types/jest": "^23.3.5",
     "@types/node": "^10.12.0",
-    "@types/pegjs": "^0.10.1",
+    "@types/pegjs": "0.10.1",
     "jest": "^23.6.0",
-    "pegjs": "^0.10.0",
+    "pegjs": "0.10.0",
     "ts-jest": "^23.10.4",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
