--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "partial-responsify",
-  "version": "0.6.3",
+  "version": "0.6.4",
   "description": "Validate and return partial response from field, just like graphql, but without the black magic.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -40,5 +40,6 @@
     "testMatch": [
       "<rootDir>/test/*.test.+(ts|tsx|js)"
     ]
-  }
+  },
+  "dependencies": {}
 }
